<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:background="#EFEFEF"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTitle1"
        android:textAlignment="center"
        android:textStyle="bold"
        android:padding="20dp"
        android:textSize="22sp"
        android:layout_marginBottom="32dp"
         />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTitle2"
        android:gravity="center"
        android:background="#FFFFFF"
        android:textSize="16sp"
        android:padding="20dp"
        android:layout_marginBottom="16dp"
        android:foreground="?attr/selectableItemBackground"/>

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTitle3"
        android:gravity="center"
        android:background="#FFFFFF"
        android:textSize="16sp"
        android:padding="20dp"
        android:layout_marginBottom="16dp"
        android:foreground="?attr/selectableItemBackground"/>

    <TextView
        android:id="@+id/tvMajor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTitle4"
        android:gravity="center"
        android:background="#FFFFFF"
        android:textSize="16sp"
        android:padding="20dp"
        android:layout_marginBottom="16dp"
        android:foreground="?attr/selectableItemBackground"/>

    <TextView
        android:id="@+id/tvFavourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTitle5"
        android:gravity="center"
        android:background="#FFFFFF"
        android:textSize="16sp"
        android:padding="20dp"
        android:layout_marginBottom="16dp"
        android:foreground="?attr/selectableItemBackground"/>

</LinearLayout>