<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#EFEFEF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="48dp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@android:drawable/ic_menu_revert"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/btnBack" />

        <TextView
            android:id="@+id/tvInputTitle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tvInputTitle"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginEnd="48dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/etInputInfo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:hint="@string/hintInput"
        android:padding="12dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSubmit"
        android:layout_gravity="center_horizontal"
        android:enabled="false"/> </LinearLayout>